# 2048.cpp

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  meson.build
src/: game.cpp  global.cpp  meson.build  run_stdin.py
